# vox

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  config.toml  config.toml.example  justfile  main.py  pyproject.toml  pyrightconfig.json
scripts/: setup_streaming.sh
tests/: conftest.py  test_benchmark.py  test_config.py  test_dictionary.py  test_history.py  test_hotkey.py  test_indicator.py  test_integration.py  test_output.py  test_pipeline.py  test_processor.py  test_recorder.py  test_sounds.py  test_transcriber.py  test_transcriber_base.py  test_transcriber_cw.py  test_transcriber_fw.py
vox/: config.py  dictionary.py  history.py  hotkey.py  indicator.py  output.py  pipeline.py  processor.py  recorder.py  sounds.py  transcriber.py  transcriber_base.py  transcriber_cw.py  transcriber_cw_decode.py  transcriber_fw.py  web.py
vox/templates/: index.html
