[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vox"
version = "0.1.0"
description = "Local, offline, GPU-accelerated voice-to-text for Linux"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper",
    "sounddevice",
    "pynput",
    "pyperclip",
    "openai",
    "flask>=3.1.3",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]

[dependency-groups]
dev = [
    "pytest",
    "jiwer",
    "datasets",
    "ruff",
    "pyright",
    "pre-commit",
    "matplotlib>=3.10.8",
    "soundfile>=0.13.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
