[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vox"
version = "0.1.0"
description = "Local, offline, GPU-accelerated voice-to-text for Linux"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper",
    "sounddevice",
    "pynput",
    "pyperclip",
    "openai",
    "flask>=3.1.3",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "jiwer",
    "datasets",
    "ruff",
    "pyright",
    "pre-commit",
    "matplotlib>=3.10.8",
    "soundfile>=0.13.1",
    "vulture>=2.16",
]

[project.optional-dependencies]
streaming = [
    "torch>=2.6.0",
    "pytorch-lightning>=2.5.0",
    "huggingface-hub>=0.20.0",
    "pyaudio>=0.2.14",
    "tiktoken>=0.7.0",
    "numba>=0.60.0",
    "praatio>=6.2.0",
    "soundfile>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
